--- a/src/views/pages/account/card.ejs
+++ b/src/views/pages/account/card.ejs
@@ -2,154 +2,152 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-    <title>2WAYS.com</title>
-    <link rel="stylesheet" href="/styles/pages/account/payment.css" />
-    <link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+	<link rel="stylesheet" href="/styles/pages/account/payment.css" />
+	<title>2WAYS.com</title>
 </head>
 
 <body>
-    <%- include('../../partials/header-medium', { user }) %>
-    <%- include('../../partials/nav-tree', { nav_tree__data: [
+	<%- include('../../partials/header-medium', { user }) %>
+	<%- include('../../partials/nav-tree', { nav_tree__data: [
         { text: 'Trang chủ', link: '/' },
         { text: 'Cá nhân', link: null },
         { text: 'Thông tin cá nhân', link: '/account/information' }
     ]}) %>
-    <%- include('../../components/on-top-btn') %>
+	<%- include('../../components/on-top-btn') %>
 
 
-    <div class="payment-account-container">
-        <aside class="aside-content">
-            <div class="aside-content__profile">
-                <img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="" />
-                <div class="aside-content__detail">
-                    <p class="aside-content__detail-bold"><%= user.last_name + " " + user.first_name %></p>
-                    <p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
-                </div>
-            </div>
+	<div class="payment-account-container">
+		<aside class="aside-content">
+			<div class="aside-content__profile">
+				<img class="aside-content__img" src="/imgs/user/<%= user.avatar ?? 'default.jpg' %>" alt="" />
+				<div class="aside-content__detail">
+					<p class="aside-content__detail-bold"><%= user.last_name + " " + user.first_name %></p>
+					<p style="font-size: 12px"><i>Chỉnh sửa avatar</i></p>
+				</div>
+			</div>
 
-            <hr />
+			<hr />
 
-            <div class="aside-section">
-                <a style='text-decoration: none;' href="/account/information">
-                    <p>Thông tin cá nhân</p>
-                </a>
-                <a style='text-decoration: none;' href="/account/history">
-                    <p>Lịch sử đặt phòng</p>
-                </a>
-                <a style='text-decoration: none;' href="/account/card">
-                    <p class='active'>Tài khoản thanh toán</p>
-                </a>
-                <a style='text-decoration: none;' href="/account/change-password">
-                    <p>Đổi mật khẩu</p>
-                </a>
-            </div>
+			<div class="aside-section">
+				<a style='text-decoration: none;' href="/account/information">
+					<p>Thông tin cá nhân</p>
+				</a>
+				<a style='text-decoration: none;' href="/account/history">
+					<p>Lịch sử đặt phòng</p>
+				</a>
+				<a style='text-decoration: none;' href="/account/card">
+					<p class='active'>Tài khoản thanh toán</p>
+				</a>
+				<a style='text-decoration: none;' href="/account/change-password">
+					<p>Đổi mật khẩu</p>
+				</a>
+			</div>
 
-            <hr />
+			<hr />
 
-            <div class="aside-item logout-btn">
-                <a style='text-decoration: none' id="logoutButton">
-                    <p>Đăng xuất</p>
-                </a>
-                <!-- <button id="logoutButton" style='text-decoration: none'>Đăng xuất</button> -->
-            </div>
-            <div class="popup">
-                <div class="popup__main">
-                    <div class="popup__content-title">
-                        <div class="popup--top">
-                            <p class="popup__title">Đăng xuất</p>
-                            <div class="close-btn">
-                                    <span class="material-symbols-outlined">cancel</span>
-                            </div>
-                        </div>
-                    </div>
-                    <img src="/imgs/logout.png" alt="logout" class="popup__img">
-                    <div class="popup__content">
-                        <p>Bạn có chắc chắn muốn đăng xuất không?</p>
-                    </div>
-                    <div class="popup__button">
-                        <button class="btn--outlined pri btn-cancel" type="submit">Hủy</button>
-                        <button class="btn--filled pri btn-logout" type="submit">Đăng xuất</button>
-                    </div>
-                </div>
-            </div>
-        </aside>
+			<div class="aside-item logout-btn">
+				<a style='text-decoration: none' id="logoutButton">
+					<p>Đăng xuất</p>
+				</a>
+				<!-- <button id="logoutButton" style='text-decoration: none'>Đăng xuất</button> -->
+			</div>
+			<div class="popup">
+				<div class="popup__main">
+					<div class="popup__content-title">
+						<div class="popup--top">
+							<p class="popup__title">Đăng xuất</p>
+							<div class="close-btn">
+								<span class="material-symbols-outlined">cancel</span>
+							</div>
+						</div>
+					</div>
+					<img src="/imgs/logout.png" alt="logout" class="popup__img">
+					<div class="popup__content">
+						<p>Bạn có chắc chắn muốn đăng xuất không?</p>
+					</div>
+					<div class="popup__button">
+						<button class="btn--outlined pri btn-cancel" type="submit">Hủy</button>
+						<button class="btn--filled pri btn-logout" type="submit">Đăng xuất</button>
+					</div>
+				</div>
+			</div>
+		</aside>
 
-        <section class="form form-input">
-            <div class="form__title">
-                <h1>Thông tin thanh toán</h1>
-                <p>Thêm hoặc bỏ các phương thức thanh toán</p>
-            </div>
+		<section class="form form-input">
+			<div class="form__title">
+				<h1>Thông tin thanh toán</h1>
+				<p>Thêm hoặc bỏ các phương thức thanh toán</p>
+			</div>
 
-            <hr />
+			<hr />
 
-            <div class="form__card-items">
-                <div class="form__card-item ">
-                    <div class="form__debit-credit-card">
-                        <h1>Thẻ tín dụng/ghi nợ</h1>
-                        <button class="debit-credit-card--submit add-credit-account-btn">+ Thêm thẻ mới</button>
-                    </div>
-                    <% if (data.debit_cards.length == 0) { %>
-                    <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
-                    <% } else { %>
-                    <% data.debit_cards.forEach(function (debit,index) { %>
-                    <% if (index==0) { %>
-                    <%-include('../../components/card-fill', {debit})%>
-                    <% } else { %>
-                    <%-include('../../components/card-fill-default', {debit})%>
-                    <% } %>
-                    <% }) %>
-                    <% } %>
+			<div class="form__card-items">
+				<div class="form__card-item ">
+					<div class="form__debit-credit-card">
+						<h1>Thẻ tín dụng/ghi nợ</h1>
+						<button class="debit-credit-card--submit add-credit-account-btn">+ Thêm thẻ mới</button>
+					</div>
+					<% if (data.debit_cards.length == 0) { %>
+					<h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
+					<% } else { %>
+					<% data.debit_cards.forEach(function (debit,index) { %>
+					<% if (index==0) { %>
+					<%-include('../../components/card-fill', {debit})%>
+					<% } else { %>
+					<%-include('../../components/card-fill-default', {debit})%>
+					<% } %>
+					<% }) %>
+					<% } %>
 
-                </div>
+				</div>
 
-                <div class="form__card-item ">
-                    <div class="form__bank-account">
-                        <h1>Tài khoản ngân hàng của tôi</h1>
-                        <button class="bank-account--submit add-bank-account-btn">+ Thêm tài khoản ngân hàng</button>
-                    </div>
-                    <% if (data.bank_cards.length == 0) { %>
-                    <h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
-                    <% } else { %>
-                    <% data.bank_cards.forEach(function (bank,index) { %>
-                    <% if (index==0) { %>
-                    <%-include('../../components/bank-fill', {bank})%>
-                    <% } else { %>
-                    <%-include('../../components/bank-fill-default', {bank})%>
-                    <% } %>
-                    <% }) %>
-                    <% } %>
-                </div>
-            </div>
+				<div class="form__card-item ">
+					<div class="form__bank-account">
+						<h1>Tài khoản ngân hàng của tôi</h1>
+						<button class="bank-account--submit add-bank-account-btn">+ Thêm tài khoản ngân hàng</button>
+					</div>
+					<% if (data.bank_cards.length == 0) { %>
+					<h2>Bạn chưa liên kết thẻ tín dụng/ghi nợ</h2>
+					<% } else { %>
+					<% data.bank_cards.forEach(function (bank,index) { %>
+					<% if (index==0) { %>
+					<%-include('../../components/bank-fill', {bank})%>
+					<% } else { %>
+					<%-include('../../components/bank-fill-default', {bank})%>
+					<% } %>
+					<% }) %>
+					<% } %>
+				</div>
+			</div>
 
-        </section>
-    </div>
-    <%- include('../../components/otp-bank') %>
-    <%- include('../../components/otp-debit') %>
-    <%- include('../../components/conform-del-debit') %>
-    <%- include('../../components/conform-del-bank') %>
-    <%- include('../../components/success-popup') %>
-    <%- include('../../components/bank-account-popup') %>
-    <%- include('../../components/credit-account-popup') %>
+		</section>
+	</div>
+	<%- include('../../components/otp-bank') %>
+	<%- include('../../components/otp-debit') %>
+	<%- include('../../components/conform-del-debit') %>
+	<%- include('../../components/conform-del-bank') %>
+	<%- include('../../components/success-popup') %>
+	<%- include('../../components/bank-account-popup') %>
+	<%- include('../../components/credit-account-popup') %>
 
 
-    <%- include('../../partials/footer') %>
+	<%- include('../../partials/footer') %>
 
-    <script src="/scripts/payment-account.js"></script>
-    <script src="/scripts/bank-account-popup.js" defer></script>
-    <script src="/scripts/credit-account-popup.js"></script>
-    <script src="/scripts/search-bar.js"></script>
-    <script src="/scripts/otp-bank.js" defer></script>
-    <script src="/scripts/otp-debit.js" defer></script>
-    <script src="/scripts/header-medium.js"></script>
-    <script src="/scripts/logout-popup.js"></script>
-    <script src="/scripts/base.js"></script>
+	<script src="/scripts/payment-account.js"></script>
+	<script src="/scripts/bank-account-popup.js" defer></script>
+	<script src="/scripts/credit-account-popup.js"></script>
+	<script src="/scripts/search-bar.js"></script>
+	<script src="/scripts/otp-bank.js" defer></script>
+	<script src="/scripts/otp-debit.js" defer></script>
+	<script src="/scripts/header-medium.js"></script>
+	<script src="/scripts/logout-popup.js"></script>
+	<script src="/scripts/base.js"></script>
 
 </body>
 
