--- a/src/views/pages/admin/dashboard.ejs
+++ b/src/views/pages/admin/dashboard.ejs
@@ -2,95 +2,96 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/styles/pages/admin/dashboard.css" />
-    <title>2WAYS.com</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0..1,0" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link rel="stylesheet" href="/styles/pages/admin/dashboard.css" />
+	<title>2WAYS.com</title>
 </head>
 
 <body>
 
-    <%- include('../../partials/admin-nav') %>
+	<%- include('../../partials/admin-nav') %>
 
-    <main>
-        <section class="main-container">
-            <h2>Chào mừng Admin0123</h2>
-            <div class="summary">
-                <div class="summary__rooms">
-                    <h1><%=totalRoomType%></h1>
-                    <p>Phòng</p>
-                </div>
-                <div class="summary__bookings">
-                    <h1><%=totalBooking%></h1>
-                    <p>Lượt đặt phòng</p>
-                </div>
-                <div class="summary__ratings">
-                    <h1><%=totalRating%></h1>
-                    <p>Đánh giá</p>
-                </div>
-            </div>
+	<main>
+		<section class="main-container">
+			<h2>Chào mừng Admin0123</h2>
+			<div class="summary">
+				<div class="summary__rooms">
+					<h1><%=totalRoomType%></h1>
+					<p>Phòng</p>
+				</div>
+				<div class="summary__bookings">
+					<h1><%=totalBooking%></h1>
+					<p>Lượt đặt phòng</p>
+				</div>
+				<div class="summary__ratings">
+					<h1><%=totalRating%></h1>
+					<p>Đánh giá</p>
+				</div>
+			</div>
 
-            <div class="tables">
-                <div class="tables__bookings">
-                    <div class="tables__title">
-                        <h2>Đặt hàng gần đây</h2>
-                        <a href="#">Xem thêm</a>
-                    </div>
+			<div class="tables">
+				<div class="tables__bookings">
+					<div class="tables__title">
+						<h2>Đặt hàng gần đây</h2>
+						<a href="#">Xem thêm</a>
+					</div>
 
-                    <div class="tables__col">
-                        <p>Người dùng</p>
-                        <p>Số tiền</p>
-                        <p>Thời gian</p>
-                        <div class="tables__last-col"></div>
-                    </div>
-                    <div class="tables__rows">
-                        <% lastestBooking.forEach(function(booking) { %>
-                            <div>
-                                <p><%=booking.au_user_full_name%></p>
-                                <p><%=booking.book_cost_after%></p>
-                                <p><%=booking.book_datetime_format%></p>
-                                <a href="#">Chi tiết</a>
-                            </div>
-                        <% }) %>
-                    </div>
-                </div>
-                <div class="tables__ratings">
-                    <div class="tables__title">
-                        <h2>Đánh giá gần đây</h2>
-                        <a href="#">Xem thêm</a>
-                    </div>
+					<div class="tables__col">
+						<p>Người dùng</p>
+						<p>Số tiền</p>
+						<p>Thời gian</p>
+						<div class="tables__last-col"></div>
+					</div>
+					<div class="tables__rows">
+						<% lastestBooking.forEach(function(booking) { %>
+						<div>
+							<p><%=booking.au_user_full_name%></p>
+							<p><%=booking.book_cost_after%></p>
+							<p><%=booking.book_datetime_format%></p>
+							<a href="#">Chi tiết</a>
+						</div>
+						<% }) %>
+					</div>
+				</div>
+				<div class="tables__ratings">
+					<div class="tables__title">
+						<h2>Đánh giá gần đây</h2>
+						<a href="#">Xem thêm</a>
+					</div>
 
-                    <div class="tables__col">
-                        <p>Người dùng</p>
-                        <p>Số điểm</p>
-                        <p>Thời gian</p>
-                        <div class="tables__last-col"></div>
-                    </div>
+					<div class="tables__col">
+						<p>Người dùng</p>
+						<p>Số điểm</p>
+						<p>Thời gian</p>
+						<div class="tables__last-col"></div>
+					</div>
 
-                    <div class="tables__rows">
-                        <% lastestRating.forEach(function(rating) { %>
-                            <div>
-                                <p><%=rating.au_user_full_name%></p>
-                                <p><%=rating.rating_point%></p>
-                                <p><%=rating.rating_datetime_format%></p>
-                                <a href="#">Chi tiết</a>
-                            </div>
-                        <% }) %>
-                    </div>
-                </div>
-            </div>
-            <div class="chart">
-                <h2>Thống kê</h2>
-                <div><canvas id="chart"></canvas></div>
-                <p>Biểu đồ thể hiện tỉ lệ giữa số đơn đặt, lượt đánh giá, và điểm đánh giá trung bình theo tháng trong năm 2023.</p>
-            </div>
-        </section>
-    </main>
+					<div class="tables__rows">
+						<% lastestRating.forEach(function(rating) { %>
+						<div>
+							<p><%=rating.au_user_full_name%></p>
+							<p><%=rating.rating_point%></p>
+							<p><%=rating.rating_datetime_format%></p>
+							<a href="#">Chi tiết</a>
+						</div>
+						<% }) %>
+					</div>
+				</div>
+			</div>
+			<div class="chart">
+				<h2>Thống kê</h2>
+				<div><canvas id="chart"></canvas></div>
+				<p>Biểu đồ thể hiện tỉ lệ giữa số đơn đặt, lượt đánh giá, và điểm đánh giá trung bình theo tháng trong năm 2023.</p>
+			</div>
+		</section>
+	</main>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/scripts/dashboard.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<script src="/scripts/dashboard.js"></script>
 
 </body>
 
