--- a/src/views/pages/auth/forgot.ejs
+++ b/src/views/pages/auth/forgot.ejs
@@ -2,47 +2,47 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <title>2WAYS.com</title>
-
-    <link rel="stylesheet" href="/styles/pages/auth/forgot.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<link rel="stylesheet" href="/styles/pages/auth/forgot.css">
+	<title>2WAYS.com</title>
 </head>
 
 <body>
-    <%- include('../../partials/header-small-title', {
+	<%- include('../../partials/header-small-title', {
         title: "Quên mật khẩu",
         help: "Bạn cần sự trợ giúp?"
     }) %>
 
-    <main class="content-container">
-        <section class="forgotPassword">
-            <h1 class="forgotPassword__title">Nhận liên kết đặt lại mật khẩu</h1>
-            <form class="forgotPassword__form form" id="forgotPasswordPost" action="post">
-                <div class="row">
-                    <label for="form__email" class="form-label">
-                        Email
-                        <p class="form-text forgotPassword__note">Nhập email bạn đã đăng ký để nhận liên kết đặt lại mật khẩu.</p>
-                    </label>
-                    <input type="email" name="email" class="form-control form__email" id="form__email" placeholder="Nhập email">
-                </div>
-                <div class="error-message" id="error-message"></div>
+	<main class="content-container">
+		<section class="forgotPassword">
+			<h1 class="forgotPassword__title">Nhận liên kết đặt lại mật khẩu</h1>
+			<form class="forgotPassword__form form" id="forgotPasswordPost" action="post">
+				<div class="row">
+					<label for="form__email" class="form-label">
+						Email
+						<p class="form-text forgotPassword__note">Nhập email bạn đã đăng ký để nhận liên kết đặt lại mật khẩu.</p>
+					</label>
+					<input type="email" name="email" class="form-control form__email" id="form__email" placeholder="Nhập email">
+				</div>
+				<div class="error-message" id="error-message"></div>
 
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="submit" class="btn form__submit">Gửi</button>
-                </div>
-            </form>
-        </section>
-    </main>
+				<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+					<button type="submit" class="btn form__submit">Gửi</button>
+				</div>
+			</form>
+		</section>
+	</main>
 
-    <%- include('../../partials/footer') %>
+	<%- include('../../partials/footer') %>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="/scripts/forgot-password.js"></script>
-    <script src="/scripts/header-small-title.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="/scripts/forgot-password.js"></script>
+	<script src="/scripts/header-small-title.js"></script>
 </body>
 
 </html>
