--- a/src/views/pages/notifications/account-update.ejs
+++ b/src/views/pages/notifications/account-update.ejs
@@ -4,21 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<title>2WAYS.com</title>
-	<link rel="stylesheet" href="/styles/pages/notification/account-update.css">
 	<link rel="stylesheet" href="/styles/pages/search/daterangepicker.css">
+	<link rel="stylesheet" href="/styles/pages/notification/account-update.css">
+	<title>2WAYS.com</title>
 </head>
 
 <body>
-  <%- include('../../partials/header-medium') %>
-  <%- include('../../partials/nav-tree', { nav_tree__data: [
-    { text: 'Trang chủ', link: "/" },
-    { text: ' Thông báo', link: "/notifications/account-update"},
-	{ text: ' Cập nhật tài khoản', link: "/notifications/account-update"},
-] }) %>
-
+	<%- include('../../partials/header-medium') %>
+	<%- include('../../partials/nav-tree', { nav_tree__data: [
+		{ text: 'Trang chủ', link: "/" },
+		{ text: ' Thông báo', link: "/notifications/account-update"},
+		{ text: ' Cập nhật tài khoản', link: "/notifications/account-update"},
+	] }) %>
 
 	<main class="nofi-container">
 		<aside class="aside-wrapper">
