--- a/src/views/pages/notifications/promotion.ejs
+++ b/src/views/pages/notifications/promotion.ejs
@@ -4,20 +4,21 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-	<title>2WAYS.com</title>
-	<link rel="stylesheet" href="/styles/pages/notification/promotion.css">
 	<link rel="stylesheet" href="/styles/pages/search/daterangepicker.css">
+	<link rel="stylesheet" href="/styles/pages/notification/promotion.css">
+	<title>2WAYS.com</title>
 </head>
 
 <body>
 	<%- include('../../partials/header-medium') %>
 	<%- include('../../partials/nav-tree', { nav_tree__data: [
-    { text: 'Trang chủ', link: "/" },
-    { text: 'Thông báo', link: "#"},
-    { text: 'Thông tin khuyến mãi', link: "/notifications/promotion"}
-] }) %>
+		{ text: 'Trang chủ', link: "/" },
+		{ text: 'Thông báo', link: "#"},
+		{ text: 'Thông tin khuyến mãi', link: "/notifications/promotion"}
+	] }) %>
 
 	<main class="nofi-container">
 		<aside class="aside-wrapper">
