--- a/src/views/pages/site/error404.ejs
+++ b/src/views/pages/site/error404.ejs
@@ -2,21 +2,22 @@
 <html lang="vi">
 
 <head>
-    <meta charset="UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/styles/pages/site/error404.css" />
-    <title>2WAYS.com</title>
+	<meta charset="UTF-8" />
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link rel="stylesheet" href="/styles/pages/site/error404.css" />
+	<title>2WAYS.com</title>
 </head>
 
 <body>
-    <div id="main">
-        <div class="error-page">
-            <div>
-                <h1 data-h1="404">404</h1>
-                <p data-p="BAD REQUEST">BAD REQUEST</p>
-            </div>
-        </div>
-    </div>
+	<div id="main">
+		<div class="error-page">
+			<div>
+				<h1 data-h1="404">404</h1>
+				<p data-p="BAD REQUEST">BAD REQUEST</p>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
