--- a/src/views/pages/site/terms-of-use.ejs
+++ b/src/views/pages/site/terms-of-use.ejs
@@ -2,125 +2,126 @@
 <html lang="vi">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/styles/pages/site/terms-of-use.css">
-  <title>2WAYS.COM</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="/imgs/favicon.svg" type="image/x-icon">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,1,0" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<link rel="stylesheet" href="/styles/pages/site/terms-of-use.css">
+	<title>2WAYS.COM</title>
 </head>
 
 <body>
-  <%- include('../../partials/header-small') %>
-  <%- include('../../components/on-top-btn') %>
-  <%- include('../../partials/nav-tree', { nav_tree__data: [
-      { text: 'Trang chủ', link: "/" },
-      { text: 'Điều khoản chung', link: "/terms-of-use"}
-  ] }) %>
+	<%- include('../../partials/header-small') %>
+	<%- include('../../components/on-top-btn') %>
+	<%- include('../../partials/nav-tree', { nav_tree__data: [
+		{ text: 'Trang chủ', link: "/" },
+		{ text: 'Điều khoản chung', link: "/terms-of-use"}
+	] }) %>
 
-  <main class="term__container">
-    <h2 class="term__header">ĐIỀU KHOẢN CHUNG</h2>
-    <div class="term-intro">
-      <p>Điều Khoản Chung <span class="highlight">(“ĐKC”)</span> này áp dụng cho các Khách và Đối Tác sử dụng hoặc đặt dịch vụ tại các khách sạn,
-        khu nghỉ dưỡng mang thương hiệu 2WAYS, và các thương hiệu khác thuộc quyền sở hữu,
-        quản lý và/hoặc khai thác của 2WAYS (nếu có) trong tương lai. Khách hoặc Đối Tác và 2WAYS
-        được gọi riêng là <span class="highlight">“Bên”</span> và gọi chung là <span class="highlight">“Các Bên”</span>.</p>
-      <p>Khách/Đối Tác đồng ý và thừa nhận rằng bằng việc gửi cho 2WAYS yêu cầu đặt phòng, yêu cầu sự kiện và/hoặc
-        các dịch vụ bổ sung (gọi chung là <span class="highlight">“Yêu Cầu Dịch Vụ”</span>) và được 2WAYS xác nhận dịch vụ là Khách và Đối Tác đã đọc
-        và chấp nhận ĐKC. Những thay đổi ĐKC tại từng thời điểm được đăng tải trên
-        trang web chính thức của 2WAYS tại địa chỉ <a href="#"></a>.</p>
-      <p>ĐKC là một phần không thể tách rời của hợp đồng, thỏa thuận cung cấp, sử dụng dịch vụ hoặc Yêu Cầu Dịch Vụ được xác nhận giữa 2WAYS và Khách /Đối Tác.</p>
-      </section>
+	<main class="term__container">
+		<h2 class="term__header">ĐIỀU KHOẢN CHUNG</h2>
+		<div class="term-intro">
+			<p>Điều Khoản Chung <span class="highlight">(“ĐKC”)</span> này áp dụng cho các Khách và Đối Tác sử dụng hoặc đặt dịch vụ tại các khách sạn,
+				khu nghỉ dưỡng mang thương hiệu 2WAYS, và các thương hiệu khác thuộc quyền sở hữu,
+				quản lý và/hoặc khai thác của 2WAYS (nếu có) trong tương lai. Khách hoặc Đối Tác và 2WAYS
+				được gọi riêng là <span class="highlight">“Bên”</span> và gọi chung là <span class="highlight">“Các Bên”</span>.</p>
+			<p>Khách/Đối Tác đồng ý và thừa nhận rằng bằng việc gửi cho 2WAYS yêu cầu đặt phòng, yêu cầu sự kiện và/hoặc
+				các dịch vụ bổ sung (gọi chung là <span class="highlight">“Yêu Cầu Dịch Vụ”</span>) và được 2WAYS xác nhận dịch vụ là Khách và Đối Tác đã đọc
+				và chấp nhận ĐKC. Những thay đổi ĐKC tại từng thời điểm được đăng tải trên
+				trang web chính thức của 2WAYS tại địa chỉ <a href="#"></a>.</p>
+			<p>ĐKC là một phần không thể tách rời của hợp đồng, thỏa thuận cung cấp, sử dụng dịch vụ hoặc Yêu Cầu Dịch Vụ được xác nhận giữa 2WAYS và Khách /Đối Tác.</p>
+			</section>
 
-      <section class="term-defi">
-        <h3>ĐIỀU 1. ĐỊNH NGHĨA:</h3>
-        <ol>
-          <li><span class="highlight">“2WAYS”</span> có nghĩa là Công ty cổ phần 2WAYS, các công ty liên kết của Công ty cổ phần 2WAYS
-            và các chi nhánh, văn phòng đại diện, địa điểm kinh doanh của 2WAYS và các công ty liên kết của
-            2WAYS được thành lập trên toàn quốc tại từng thời điểm.</li>
-          <li><span class="highlight">“Đối Tác”</span> là đại lý du lịch/hãng lữ hành/doanh nghiệp/tổ chức, cá nhân giao kết hợp đồng với 2WAYS.</li>
-          <li><span class="highlight">“Khách”</span> là cá nhân sử dụng dịch vụ của 2WAYS với mục đích tiêu dùng trực tiếp, không dùng để bán lại cho cá nhân, tổ chức khác.</li>
-          <li><span class="highlight">“Dịch Vụ”</span> bao gồm dịch vụ lưu trú, tiệc sự kiện, golf, Voucher hoặc dịch vụ bổ sung khác mà 2WAYS cung cấp tại từng thời điểm như vận chuyển, dịch vụ vui chơi giải trí…</li>
-        </ol>
-      </section>
+			<section class="term-defi">
+				<h3>ĐIỀU 1. ĐỊNH NGHĨA:</h3>
+				<ol>
+					<li><span class="highlight">“2WAYS”</span> có nghĩa là Công ty cổ phần 2WAYS, các công ty liên kết của Công ty cổ phần 2WAYS
+						và các chi nhánh, văn phòng đại diện, địa điểm kinh doanh của 2WAYS và các công ty liên kết của
+						2WAYS được thành lập trên toàn quốc tại từng thời điểm.</li>
+					<li><span class="highlight">“Đối Tác”</span> là đại lý du lịch/hãng lữ hành/doanh nghiệp/tổ chức, cá nhân giao kết hợp đồng với 2WAYS.</li>
+					<li><span class="highlight">“Khách”</span> là cá nhân sử dụng dịch vụ của 2WAYS với mục đích tiêu dùng trực tiếp, không dùng để bán lại cho cá nhân, tổ chức khác.</li>
+					<li><span class="highlight">“Dịch Vụ”</span> bao gồm dịch vụ lưu trú, tiệc sự kiện, golf, Voucher hoặc dịch vụ bổ sung khác mà 2WAYS cung cấp tại từng thời điểm như vận chuyển, dịch vụ vui chơi giải trí…</li>
+				</ol>
+			</section>
 
-      <section class="term-rule">
-        <h3>ĐIỀU 2. QUY ĐỊNH NHẬN VÀ TRẢ PHÒNG:</h3>
-        <ol>
-          <li>Thời gian nhận và trả phòng:</li>
-          <ul>
-            <li><span class="title">Thời gian nhận phòng:</span> 14:00 giờ ngày Khách đến</li>
-            <li><span class="title">Thời gian trả phòng:</span> Không quá 12:00 giờ trưa ngày trả phòng</li>
-            <li><span class="title">Phí nhận phòng sớm trước 6:00 giờ sáng:</span> 100% Giá 1 đêm phòng</li>
-            <li><span class="title">Phí nhận phòng sớm từ 6:00 giờ sáng đến 12:00 giờ trưa:</span> 50% Giá Gói Phòng bao gồm bữa sáng. Các bữa ăn và dịch vụ khác (nếu có nhu cầu sử dụng) sẽ thanh toán theo giá công bố tại khách sạn.</li>
-            <li><span class="title">Phí trả phòng muộn từ sau 12:00 giờ đến 21:00 giờ:</span> 50% Giá Phòng không bao gồm bữa ăn & các dịch vụ khác. Các bữa ăn và dịch vụ phát sinh (nếu có nhu cầu sử dụng) sẽ thanh toán theo giá công bố tại khách sạn</li>
-            <li><span class="title">Phí trả phòng muộn sau 21:00 giờ:</span> 100% Giá 1 đêm phòng</li>
-          </ul>
-          <li>Các khoản phí nhận phòng sớm/trả phòng muộn nêu trên sẽ đươc tính theo giá công bố của 2WAYS
-            (bao gồm giá chương trình khuyến mại nếu đang áp dụng tại thời điểm thanh toán) khi Khách trực tiếp
-            thanh toán cho 2WAYS hoặc giá theo hợp đồng/thỏa thuận (bao gồm giá chương trình khuyến mại
-            nếu đang áp dụng tại thời điểm thanh toán) giữa 2WAYS và Đối Tác nếu Đối Tác là bên thanh toán.</li>
-        </ol>
-      </section>
+			<section class="term-rule">
+				<h3>ĐIỀU 2. QUY ĐỊNH NHẬN VÀ TRẢ PHÒNG:</h3>
+				<ol>
+					<li>Thời gian nhận và trả phòng:</li>
+					<ul>
+						<li><span class="title">Thời gian nhận phòng:</span> 14:00 giờ ngày Khách đến</li>
+						<li><span class="title">Thời gian trả phòng:</span> Không quá 12:00 giờ trưa ngày trả phòng</li>
+						<li><span class="title">Phí nhận phòng sớm trước 6:00 giờ sáng:</span> 100% Giá 1 đêm phòng</li>
+						<li><span class="title">Phí nhận phòng sớm từ 6:00 giờ sáng đến 12:00 giờ trưa:</span> 50% Giá Gói Phòng bao gồm bữa sáng. Các bữa ăn và dịch vụ khác (nếu có nhu cầu sử dụng) sẽ thanh toán theo giá công bố tại khách sạn.</li>
+						<li><span class="title">Phí trả phòng muộn từ sau 12:00 giờ đến 21:00 giờ:</span> 50% Giá Phòng không bao gồm bữa ăn & các dịch vụ khác. Các bữa ăn và dịch vụ phát sinh (nếu có nhu cầu sử dụng) sẽ thanh toán theo giá công bố tại khách sạn</li>
+						<li><span class="title">Phí trả phòng muộn sau 21:00 giờ:</span> 100% Giá 1 đêm phòng</li>
+					</ul>
+					<li>Các khoản phí nhận phòng sớm/trả phòng muộn nêu trên sẽ đươc tính theo giá công bố của 2WAYS
+						(bao gồm giá chương trình khuyến mại nếu đang áp dụng tại thời điểm thanh toán) khi Khách trực tiếp
+						thanh toán cho 2WAYS hoặc giá theo hợp đồng/thỏa thuận (bao gồm giá chương trình khuyến mại
+						nếu đang áp dụng tại thời điểm thanh toán) giữa 2WAYS và Đối Tác nếu Đối Tác là bên thanh toán.</li>
+				</ol>
+			</section>
 
-      <section>
-        <h3>ĐIỀU 3. CHÍNH SÁCH ĐẶT PHÒNG</h3>
-        <ol>
-          <li>2WAYS có quyền tiến hành sửa chữa, cải tạo hoặc nâng cấp/ thực hiện các chương trình
-            bảo dưỡng định kỳ phù hợp với mục đích duy trì điều kiện tốt nhất cho Khách Sạn. 2WAYS
-            có toàn quyền tự đưa ra các quyết định sửa chữa, nâng cấp, nhưng phải có thông báo bằng email/fax
-            đến Đối Tác và/hoặc Khách trước khi bắt đầu các công trình nâng cấp lớn và kéo dài mà có thể ảnh hưởng
-            đến sự hài lòng của Khách.</li>
-          <li>2WAYS sẽ không chịu trách nhiệm với bất kỳ khiếu nại, yêu cầu đối với các tổn thất và/hoặc
-            thiệt hại mà Đại lý và/hoặc khách hàng sẽ gặp phải do cải tạo/nâng cấp sau khi đã thông báo trước
-            với Đại lý/Đối tác/khách hàng.</li>
-        </ol>
-      </section>
+			<section>
+				<h3>ĐIỀU 3. CHÍNH SÁCH ĐẶT PHÒNG</h3>
+				<ol>
+					<li>2WAYS có quyền tiến hành sửa chữa, cải tạo hoặc nâng cấp/ thực hiện các chương trình
+						bảo dưỡng định kỳ phù hợp với mục đích duy trì điều kiện tốt nhất cho Khách Sạn. 2WAYS
+						có toàn quyền tự đưa ra các quyết định sửa chữa, nâng cấp, nhưng phải có thông báo bằng email/fax
+						đến Đối Tác và/hoặc Khách trước khi bắt đầu các công trình nâng cấp lớn và kéo dài mà có thể ảnh hưởng
+						đến sự hài lòng của Khách.</li>
+					<li>2WAYS sẽ không chịu trách nhiệm với bất kỳ khiếu nại, yêu cầu đối với các tổn thất và/hoặc
+						thiệt hại mà Đại lý và/hoặc khách hàng sẽ gặp phải do cải tạo/nâng cấp sau khi đã thông báo trước
+						với Đại lý/Đối tác/khách hàng.</li>
+				</ol>
+			</section>
 
-      <section>
-        <h3>ĐIỀU 4. BẤT KHẢ KHÁNG</h3>
-        <ol>
-          <p>2WAYS, Khách hoặc Đối Tác sẽ không phải chịu trách nhiệm về việc chậm trễ,
-            không thực hiện hợp đồng/thỏa thuận cung cấp và sử dụng dịch vụ (trừ nghĩa vụ thanh toán)
-            hoặc các quyền và nghĩa vụ của mỗi Bên quy định tại ĐKC nếu việc chậm trễ, không thực hiện
-            đó có nguyên nhân là do sự kiện Bất khả kháng. Sự kiện Bất Khả Kháng bao gồm nhưng không hạn chế:
-            Bão lụt, động đất, chiến tranh, hoả hoạn, sự thay đổi của chính sách, pháp luật của nhà nước hoặc các
-            sự kiện khách quan khác.</p>
-          <p style="font-style: italic;">Với điều kiện:</p>
-          <li>Sự kiện đó hoàn toàn nằm ngoài sự kiểm soát hợp lý hoặc không do lỗi hoặc sơ suất của Bên bị ảnh hưởng
-            bởi sự kiện Bất Khả Kháng, mặc dù Bên đó đã áp dụng mọi biện pháp cần thiết và trong khả năng cho phép
-            để đề phòng, khắc phục hoặc giảm bớt thiệt hại, gây ra việc chậm trễ hoặc gián đoạn, đình trệ việc
-            thực hiện nghĩa vụ trong Hợp Đồng này;</li>
-          <li>Trong thời hạn 03 ngày kể từ ngày xảy ra sự kiện Bất Khả Kháng, Bên bị ảnh hưởng bởi sự kiện
-            bất khả kháng phải thông báo văn bản cho Bên kia, trong đó nêu chi tiết về sự kiện Bất Khả Kháng,
-            các biện pháp đã tiến hành để đề phòng, khắc phục thiệt hại, dự kiến kế hoạch khắc phục và biện pháp
-            giải quyết.</li>
-          <li>Trừ khi có ý kiến khác của 2WAYS bằng văn bản, Khách hoặc Đối Tác vẫn phải thực hiện các nghĩa vụ
-            của mình theo Hợp đồng phù hợp với hoàn cảnh thực tế cho phép và phải tiến hành mọi biện pháp hợp lý
-            để thực hiện các phần việc không bị Sự Kiện Bất Khả Kháng gây trở ngại</li>
+			<section>
+				<h3>ĐIỀU 4. BẤT KHẢ KHÁNG</h3>
+				<ol>
+					<p>2WAYS, Khách hoặc Đối Tác sẽ không phải chịu trách nhiệm về việc chậm trễ,
+						không thực hiện hợp đồng/thỏa thuận cung cấp và sử dụng dịch vụ (trừ nghĩa vụ thanh toán)
+						hoặc các quyền và nghĩa vụ của mỗi Bên quy định tại ĐKC nếu việc chậm trễ, không thực hiện
+						đó có nguyên nhân là do sự kiện Bất khả kháng. Sự kiện Bất Khả Kháng bao gồm nhưng không hạn chế:
+						Bão lụt, động đất, chiến tranh, hoả hoạn, sự thay đổi của chính sách, pháp luật của nhà nước hoặc các
+						sự kiện khách quan khác.</p>
+					<p style="font-style: italic;">Với điều kiện:</p>
+					<li>Sự kiện đó hoàn toàn nằm ngoài sự kiểm soát hợp lý hoặc không do lỗi hoặc sơ suất của Bên bị ảnh hưởng
+						bởi sự kiện Bất Khả Kháng, mặc dù Bên đó đã áp dụng mọi biện pháp cần thiết và trong khả năng cho phép
+						để đề phòng, khắc phục hoặc giảm bớt thiệt hại, gây ra việc chậm trễ hoặc gián đoạn, đình trệ việc
+						thực hiện nghĩa vụ trong Hợp Đồng này;</li>
+					<li>Trong thời hạn 03 ngày kể từ ngày xảy ra sự kiện Bất Khả Kháng, Bên bị ảnh hưởng bởi sự kiện
+						bất khả kháng phải thông báo văn bản cho Bên kia, trong đó nêu chi tiết về sự kiện Bất Khả Kháng,
+						các biện pháp đã tiến hành để đề phòng, khắc phục thiệt hại, dự kiến kế hoạch khắc phục và biện pháp
+						giải quyết.</li>
+					<li>Trừ khi có ý kiến khác của 2WAYS bằng văn bản, Khách hoặc Đối Tác vẫn phải thực hiện các nghĩa vụ
+						của mình theo Hợp đồng phù hợp với hoàn cảnh thực tế cho phép và phải tiến hành mọi biện pháp hợp lý
+						để thực hiện các phần việc không bị Sự Kiện Bất Khả Kháng gây trở ngại</li>
 
-        </ol>
-      </section>
+				</ol>
+			</section>
 
-      <section>
-        <h3>ĐIỀU 5. GIẢI QUYẾT TRANH CHẤP</h3>
-        <ol>
-          <li>Các quy định tại ĐKC, QĐC sẽ được điều chỉnh bởi pháp luật Việt Nam. Tất cả các tranh chấp phát sinh
-            liên quan đến việc yêu cầu, sử dụng Dịch Vụ của Khách/ Đối Tác theo quy định tại Hợp Đồng và ĐKC
-            sẽ được cố gắng giải quyết thông qua thương lượng.</li>
-          <li>Trường hợp thương lượng, đàm phán không thành công
-            trong vòng 30 ngày kể từ ngày phát sinh tranh chấp, Các Bên sẽ có quyền đưa tranh chấp ra giải quyết
-            tại Tòa án có thẩm quyền tại Việt Nam theo quy định của pháp luật.</li>
-        </ol>
-      </section>
-    </div>
-  </main>
-  <%- include('../../partials/footer.ejs') %>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+			<section>
+				<h3>ĐIỀU 5. GIẢI QUYẾT TRANH CHẤP</h3>
+				<ol>
+					<li>Các quy định tại ĐKC, QĐC sẽ được điều chỉnh bởi pháp luật Việt Nam. Tất cả các tranh chấp phát sinh
+						liên quan đến việc yêu cầu, sử dụng Dịch Vụ của Khách/ Đối Tác theo quy định tại Hợp Đồng và ĐKC
+						sẽ được cố gắng giải quyết thông qua thương lượng.</li>
+					<li>Trường hợp thương lượng, đàm phán không thành công
+						trong vòng 30 ngày kể từ ngày phát sinh tranh chấp, Các Bên sẽ có quyền đưa tranh chấp ra giải quyết
+						tại Tòa án có thẩm quyền tại Việt Nam theo quy định của pháp luật.</li>
+				</ol>
+			</section>
+		</div>
+	</main>
+	<%- include('../../partials/footer.ejs') %>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
-  <script src="/scripts/header-small.js"></script>
-  <script src="/scripts/base.js"></script>
+	<script src="/scripts/header-small.js"></script>
+	<script src="/scripts/base.js"></script>
 </body>
 
 </html>
